# plugin-template_old

./: .gitignore  CMakeLists.txt  README.md  plugin-template.pcf.plugin  test-plugin.pcf.plugin
CMake/: FindPolymorphEngine.cmake
Core/include/: CoreTestPlugin.hpp  PluginCore.hpp
Core/src/: PluginCore.cpp
Factory/include/: ObjectFactory.hpp  ScriptFactory.hpp
Factory/src/: ObjectFactory.cpp  ScriptFactory.cpp
IncludeExport/: test-plugin-symbols.hpp
